[package]
name = "fake-newsstand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tokio = { version = "1.15", features = ["full"] }
tumblr-api = {version = "0.1", path = "./tumblr-api"}
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1.2.1"

[workspace]
members = ["tumblr-api"]