[package]
name = "tumblr-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_with = "1.14"  # for skip_serializing_none

rand = "0.8.4"

hmac = "0.12.1"
sha1 = "0.10.1"

base64 = "0.13.0"

url = "2.2.2"
hyper = "0.14"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.2.1"